--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
+
     font-size: 1rem;
     color: black;
-    background:linear-gradient(#FFFFFF, #222222);
+    background:linear-gradient(lightgray, lightblue);
 }
 
 li{
