changer la police d'écriture

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
-
     font-size: 1rem;
     color: black;
     background:linear-gradient(lightgray, lightblue);
+    font-family: "Nunito Medium";
+    text-align: center;
 }
 
 li{
