--- a/css/main.css
+++ b/css/main.css
@@ -2,26 +2,30 @@ body {
     font-size: 1rem;
     color: black;
     background:linear-gradient(lightgray, lightblue);
-    font-family: "Nunito Medium";
-    text-align: center;
+    font-family: "Nunito Medium", sans-serif;
+    text-align: left;
 }
-
-li{
+img{
+    border: 10px solid #003E3F;
+}
+li {
     color: #003E3F;
     font-size: 1rem;
 }
-
-p {
+p{
     color: #003E3F;
     font-size: 1rem;
 }
-
 h1 {
+    text-align: center;
     font-size: 3rem;
     color: #0B132B;
 }
-
 h2 {
     font-size: 2rem;
     color: #0B132B;
+}
+
+a:hover{
+    color: darkblue;
 }
