--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@ body {
     font-family: "Nunito Medium", sans-serif;
     text-align: left;
 }
+header{
+    border-bottom: 5px double #003E3F;
+    display: flex;
+    font-size: 2rem;
+}
 img{
     border: 10px solid #003E3F;
 }
