--- a/css/main.css
+++ b/css/main.css
@@ -4,27 +4,42 @@ body {
     font-weight: 400;
     color: black;
     background:linear-gradient(lightgray, lightblue);
+    margin-left: 20%;
+    margin-right: 20%;
 }
+
 header{
     border-bottom: 10px double #003E3F;
     display: flex;
+    justify-content: center;
 }
+
+main{
+    background-image: url("../images/vaisseau.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
 img{
     border: 10px solid #003E3F;
 }
+
 li {
     color: #003E3F;
     font-size: 1rem;
 }
+
 p{
     color: #003E3F;
     font-size: 1rem;
 }
+
 h1 {
     text-align: center;
     font-size: 3rem;
     color: #0B132B;
 }
+
 h2 {
     font-size: 2rem;
     color: #0B132B;
